--- a/jenkins.yml
+++ b/jenkins.yml
@@ -1,17 +1,24 @@
 version: "3.5"
 services: 
   wordpress:
+    image: wordpress:php7.3
+  jenkins-master:
     image: jenkins/jenkins:lts
     deploy:
       replicas: 2
       resources:
         reservations:
           cpus: '2'
-          memory: 2048
+          memory: '2048M'
       # placement:
       #   constraints: 
       #     - "node.labels.zone != 1"
       #   preferences:
       #     - spread: node.labels.zone
     ports:
-      - "80:80"
+      - "8082:8082"
+    # secrets:
+    #   jenkins-password:
+    #     file: jenkinspw
+    #   jenkins-username:
+    #     file: jenkinsuse
