--- a/jenkins.yml
+++ b/jenkins.yml
@@ -3,7 +3,11 @@ services:
   jenkins-master:
     image: jenkins/jenkins:lts
     volumes:
-      - jenkins-data:/var/jenkins_home
+      uploads_tmp_efs:
+        driver: local
+        driver_opts:
+        type: nfs
+        o: addr=[YOUR_EFS_DNS],nfsvers=4.1,rsize=1048576,wsize=1048576,hard,timeo=600,retrans=2
     deploy:
       replicas: 2
       resources:
